--- a/oracle-12c-kb/Upgrade/Standby-RMANDup-doc-1503653.1
+++ b/oracle-12c-kb/Upgrade/Standby-RMANDup-doc-1503653.1
@@ -88,7 +88,9 @@ Source Database	 	Intermediate Upgrade Path for Target Database	 	Target Databas
 
  If you are upgrading from 11.2.0.1 or 11.1.0.6, then you must first upgrade to Oracle Database 11g Release 2 (11.2.0.2).
  If you are upgrading from 10.2.0.2, 10.2.0.3, 10.2.0.4, or 10.1.0.5, then you must first upgrade to 10.2.0.5 or later.
- For release 9.2.0.8, you must first upgrade to an intermediate Oracle Database release, as follows: 9.2.0.8 -> 11.2.0.2 or 11.2.0.3 -> 12.1
+ For release 9.2.0.8, you must first upgrade to an intermediate Oracle Database release, as follows: 
+   9.2.0.8 -> 11.2.0.2 or 11.2.0.3 -> 12.1
+   
 Reminder:
 To locate the patchid of a patchset refer to:
 
@@ -194,11 +196,14 @@ Run the Pre-Upgrade Information Tool for Collecting Pre-Upgrade Information
  Step 1:
 
     * Log into the system as the owner of the Oracle Database 12c Release 1 (12.1) Oracle Home directory.
-    * Copy the Pre-Upgrade Information Tool script preupgrd.sql and utluppkg.sql from the Oracle Database 12c Release 1 (12.1) $ORACLE_HOME/rdbms/admin directory to  the $ORACLE_HOME/rdbms/admin directory of the source Oracle Home.
+    * Copy the Pre-Upgrade Information Tool script preupgrd.sql and utluppkg.sql 
+      from the Oracle Database 12c Release 1 (12.1) $ORACLE_HOME/rdbms/admin directory 
+      to the $ORACLE_HOME/rdbms/admin directory of the source Oracle Home.
 
   Step 2:
 
-     * Run the new Pre-Upgrade Information Tool. For example, if you copied preupgrd.sql to the /admin directory of the source Oracle Home:
+     * Run the new Pre-Upgrade Information Tool. For example, if you copied preupgrd.sql to the /admin directory 
+       of the source Oracle Home:
 
 SQL> @$ORACLE_HOME/rdbms/admin/preupgrd.sql
 preupgrade.log, preupgrade_fixups.sql and postupgrade_fixups.sql files are created in $ORACLE_HOME/cfgtoollogs/$ORACLE_SID/preupgrade/,
@@ -266,7 +271,9 @@ Create a script for DBLINKs (in case the database has to be downgraded again).
 During the upgrade to Oracle Database 12c any passwords in database links are encrypted. 
 To downgrade to the original release, all of the database links with encrypted passwords must be dropped prior to the downgrade. 
 Consequently, the database links do not exist in the downgraded database. 
-If you anticipate a requirement to be able to downgrade to your original release, then save the information about affected database links from the SYS.LINK$ table, so that you can re-create the database links after the downgrade.
+If you anticipate a requirement to be able to downgrade to your original release, 
+then save the information about affected database links from the SYS.LINK$ table, 
+so that you can re-create the database links after the downgrade.
 
 SQL> SELECT 'CREATE '||DECODE(U.NAME,'PUBLIC','public ')||'DATABASE LINK '||CHR(10)
 ||DECODE(U.NAME,'PUBLIC',Null, 'SYS','',U.NAME||'.')|| L.NAME||chr(10)
@@ -403,7 +410,8 @@ You must have sufficient space in the 'SYSTEM' tablespace or set extents to unli
 SQL> SELECT username, default_tablespace
      FROM dba_users
      WHERE username in ('SYS','SYSTEM');
-If DEFAULT_TABLESPACE is anything other than SYSTEM tablespace, modify the default tablespace for user SYS and SYSTEM to SYSTEM by using the command below:
+If DEFAULT_TABLESPACE is anything other than SYSTEM tablespace, 
+modify the default tablespace for user SYS and SYSTEM to SYSTEM by using the command below:
 
 SQL> ALTER user SYS default tablespace SYSTEM;
 SQL> ALTER user SYSTEM default tablespace SYSTEM;
@@ -419,7 +427,8 @@ If any SSL users are found then Step 33 has to be followed after the upgrade.
 
 4.17 Location of datafiles, redo logs and control files 
 
-Note the location of datafiles, redo logs and control files. Also take a backup of all configuration files like listener.ora, tnsnames.ora, etc. from $ORACLE_HOME.
+Note the location of datafiles, redo logs and control files. 
+Also take a backup of all configuration files like listener.ora, tnsnames.ora, etc. from $ORACLE_HOME.
 
 SQL> SELECT name FROM v$controlfile;
 SQL> SELECT file_name FROM dba_data_files;
@@ -434,7 +443,8 @@ Enterprise Manager Database Control is superseded in 12c by Oracle Enterprise Ma
 
      Note : You will get the emremove.sql script in the Oracle 12c home .
 
-    Copy the emremove.sql script from the 12c $ORACLE_HOME/rdbms/admin to the source $ORACLE_HOME/rdbms/admin and then execute on the source database prior to upgrade.
+    Copy the emremove.sql script from the 12c $ORACLE_HOME/rdbms/admin to the source $ORACLE_HOME/rdbms/admin 
+    and then execute on the source database prior to upgrade.
 
 $emctl stop dbcontrol
 
@@ -444,7 +454,8 @@ SQL> @ ?/rdbms/admin/emremove.sql
 
 Also refer:Is it Possible to Validate Invalid Objects related to DBControl Configuration in a Database Upgraded to 12c? (Doc ID 2118740.1)
 
-Note: This step is required if EM component exists in the database .And also if using  Cloud Control then also EM does not exists and  this step is not required.
+Note: This step is required if EM component exists in the database .And also if using  Cloud Control then also EM does not exists and  
+this step is not required.
 
 4.19 Run olspreupgrade.sql  :
 
@@ -452,7 +463,9 @@ If  OLS(Lable Security) and/or DV ( Database Vault) was already in the  database
 the following steps on Source database prior to upgrade
 
 Note : You will get the olspreupgrade.sql script in the Oracle 12c home .
-Copy the olspreupgrde.sql script from the 12c $ORACLE_HOME/rdbms/admin to the source $ORACLE_HOME/rdbms/admin and then execute on the source database prior to upgrade.
+Copy the olspreupgrde.sql script from the 12c $ORACLE_HOME/rdbms/admin to the source $ORACLE_HOME/rdbms/admin 
+and then execute on the source database prior to upgrade.
+
 SQL> @ ?/rdbms/admin/olspreupgrade.sql
    - It prepares the move of AUD$ table from SYSTEM to SYS.
 
@@ -548,7 +561,8 @@ Refer: Unpublished BUG 22454765 - CARRYING METHOD_OPT = "FOR COLUMNS ID SIZE 1" 
 
 Step 5 : Requirements and recommendations for target database
 
-     Check the certification of Oracle 12cR1 with your Platform/Operating system before downloading and installing Oracle 12cR1.Please check Certification information on My Oracle Support (MOS) Certify.
+     Check the certification of Oracle 12cR1 with your Platform/Operating system before downloading and installing Oracle 12cR1.
+     Please check Certification information on My Oracle Support (MOS) Certify.
      Download and Install Oracle 12c Release 1 in a new Oracle Home and make sure there are no relinking errors.
      Install the latest available Patchset from My Oracle Support (if available).
      Install the latest opatch available for your platform and database version (if available).
@@ -599,14 +613,16 @@ This is a two-step option.
 - Select what you want to do ==> Delete 
 - Select the listener you want to delete .
 
- Then you must run Oracle Net Configuration Assistant again from the new Oracle Database 12c Release 1 (12.1) Home to create a new listener.
+ Then you must run Oracle Net Configuration Assistant again from the new Oracle Database 12c Release 1 (12.1) 
+ Home to create a new listener.
 - Invoke the Netca
 - Choose the configuration you want to do ==> Choose Listener Configuration
 - Select what you want to do ==> Add
 - Provide the detail that is required to configure the listener.
 
 You must remove the old listener before creating a new one. 
-If you attempt to create a new listener from the new Oracle Home first, and use the same name and port as the old listener, then Oracle Net Configuration Assistant returns an error.
+If you attempt to create a new listener from the new Oracle Home first, and use the same name and port as the old listener, 
+then Oracle Net Configuration Assistant returns an error.
 
 Note: This is your only option if you want to upgrade your Oracle RAC database manually.
 
@@ -702,9 +718,13 @@ Any errors that occur during the upgrade are listed with each component and must
 $ sqlplus "/as sysdba"
 SQL> STARTUP
 SQL> @utlu121s.sql
-Important: The catuppst.sql script is run as part of the upgrade process unless the upgrade returns errors during the process. Check the log file for "BEGIN catuppst.sql" to verify that catuppst.sql ran during the upgrade process. If catuppst.sql has not run, then proceed to run catuppst.sql as shown in this step. Warning messages are also displayed when running catctl.pl indicating that catuppst.sql was not run during the upgrade.
+Important: The catuppst.sql script is run as part of the upgrade process unless the upgrade returns errors during the process. 
+Check the log file for "BEGIN catuppst.sql" to verify that catuppst.sql ran during the upgrade process. If catuppst.sql has not run, 
+then proceed to run catuppst.sql as shown in this step. Warning messages are also displayed when running catctl.pl 
+indicating that catuppst.sql was not run during the upgrade.
 
-Run catuppst.sql, located in the $ORACLE_HOME/rdbms/admin directory, to perform upgrade actions that do not require the database to be in UPGRADE mode.
+Run catuppst.sql, located in the $ORACLE_HOME/rdbms/admin directory, to perform upgrade actions 
+that do not require the database to be in UPGRADE mode.
 
 SQL> @catuppst.sql
 This script can be run concurrently with utlrp.sql. 
@@ -714,16 +734,19 @@ SQL> @utlrp.sql
 Check for the integrity of the upgraded database by running dbupgdiag.sql script from the below article:
 
 Note 556610.1  Script to Collect DB Upgrade/Migrate Diagnostic Information (dbupgdiag.sql)
-If the dbupgdiag.sql script reports any invalid objects, run $ORACLE_HOME/rdbms/admin/utlrp.sql (multiple times) to validate the invalid objects in the database, until there is no change in the number of invalid objects.
+If the dbupgdiag.sql script reports any invalid objects, run $ORACLE_HOME/rdbms/admin/utlrp.sql (multiple times) 
+to validate the invalid objects in the database, until there is no change in the number of invalid objects.
 
 After validating the invalid objects, re-run dbupgdiag.sql in the upgraded database once again and make sure that everything is fine.
 
 Exit SQL*Plus.
 
-If you are upgrading a cluster database from releases 10.2, 11.1, or 11.2, then upgrade the database configuration in Oracle Clusterware using the following command:
+If you are upgrading a cluster database from releases 10.2, 11.1, or 11.2, then upgrade the database configuration in 
+Oracle Clusterware using the following command:
 
 $ srvctl upgrade database -d db-unique-name -o oraclehome
-where db-unique-name is the database name assigned to it (not the instance name), and oraclehome is the Oracle home location in which the database is being upgraded.
+where db-unique-name is the database name assigned to it (not the instance name), and oraclehome is the Oracle home location 
+in which the database is being upgraded.
 
 Step 7: Post Upgrade Steps
 
@@ -734,7 +757,9 @@ Make sure the following environment variables point to the Oracle 12c Release 1 
                - ORACLE_HOME
                - PATH, LD_LIBRARY_PATH and SHLIB_PATH
 
-Ensure that your oratab file and any client scripts that set the value of ORACLE_HOME point to the new Oracle home that is created for the new Oracle Database 12c release,
+Ensure that your oratab file and any client scripts that set the value of ORACLE_HOME point to the new Oracle home that is created 
+for the new Oracle Database 12c release,
+
 7.2 Initialization parameter file
 
 Edit init.ora
@@ -779,7 +804,8 @@ SQL> SHUTDOWN IMMEDIATE
 7.5 Change passwords for Oracle-Supplied Accounts.
 
 Depending on the release from which you upgraded, there might be new Oracle-supplied accounts. 
-Oracle recommends that you lock all Oracle supplied accounts except for SYS and SYSTEM, and expire their passwords, thus requiring new passwords to be specified when the accounts are unlocked.
+Oracle recommends that you lock all Oracle supplied accounts except for SYS and SYSTEM, and expire their passwords, 
+thus requiring new passwords to be specified when the accounts are unlocked.
 
 You can view the status of all accounts by issuing the following SQL statement:
 
@@ -807,7 +833,8 @@ Check Summary: Check for use of older timezone data file
 Fix Summary:   Update the timezone using the DBMS_DST package after upgrade is complete.
 *******************************************************************************************
   
-Just ignore this warning, it is due to published Bug 17303129 : UPGRADE DATABASE FROM 11.1.0.7 TO 12.1.0.1, "OLDER TIMEZONE IN USE" OCCURRED
+Just ignore this warning, 
+it is due to published Bug 17303129 : UPGRADE DATABASE FROM 11.1.0.7 TO 12.1.0.1, "OLDER TIMEZONE IN USE" OCCURRED
 
 When such warning is returned then execute this query : 
 
@@ -819,7 +846,8 @@ if not DStv18 then Oracle suggests  to upgrade DST, if DSTv18 then it is Bug  17
 
 7.8  Upgrade Statistics Tables Created by the DBMS_STATS Package
 
-If you created statistics tables using the DBMS_STATS.CREATE_STAT_TABLE procedure, then upgrade these tables by executing the following procedure:
+If you created statistics tables using the DBMS_STATS.CREATE_STAT_TABLE procedure, 
+then upgrade these tables by executing the following procedure:
 
 EXECUTE DBMS_STATS.UPGRADE_STAT_TABLE('SYS','dictstattab');
 
@@ -828,7 +856,8 @@ Execute this procedure for each statistics table.
 
 7.9  Upgrade Externally Authenticated SSL Users
 
-If you have upgraded from Oracle 9.2.0.x or 10.1.0.x, and you are using externally authenticated SSL users, then you must run the following command to upgrade those users:
+If you have upgraded from Oracle 9.2.0.x or 10.1.0.x, and you are using externally authenticated SSL users, 
+then you must run the following command to upgrade those users:
 
 ORACLE_HOME/rdbms/bin/extusrupgrade --dbconnectstring
 <hostname:port_no:sid> --dbuser <db admin> --dbuserpassword
@@ -837,26 +866,35 @@ If you are upgrading from 10.2.0.x (or higher), then you are not required to run
 
 7.10  Install Oracle Text Supplied Knowledge Bases After Upgrading Oracle Database
 
-The Oracle Text-supplied knowledge bases are part of the companion products for Oracle Database 12c and are not immediately available after an upgrade to Oracle Database 12c. 
-Any Oracle Text features dependent on the supplied knowledge bases which were available before the upgrade do not function after the upgrade. 
+The Oracle Text-supplied knowledge bases are part of the companion products for Oracle Database 12c and are not immediately 
+available after an upgrade to Oracle Database 12c. 
+
+Any Oracle Text features dependent on the supplied knowledge bases which were available before the upgrade 
+do not function after the upgrade. 
+
 To re-enable such features, you must install the Oracle Text supplied knowledge bases from the installation media.
 
-After an upgrade, all user extensions to the Oracle Text supplied knowledge bases must be regenerated. These changes affect all databases installed in the given Oracle home
+After an upgrade, all user extensions to the Oracle Text supplied knowledge bases must be regenerated. 
+These changes affect all databases installed in the given Oracle home
 
 7.11  Update Your Oracle Application Express Configuration
 
 If source database originally included Application Express Version 3.2 or higher, then NO additional configuration necessary .
 
-If source database contained an earlier version of Application Express (HTML DB), then the latest version is automatically installed during the upgrade. 
+If source database contained an earlier version of Application Express (HTML DB), then the latest version is automatically 
+installed during the upgrade. 
+
 You must complete a series of post installation steps to configure Application Express for use with the new Oracle  Database 12c.
 
 7.12  Configure Fine-Grained Access to External Network Services
 
-To avoid "ORA-24247: network access denied by access control list (ACL)" when executing UTL packages (Network related packages), access has to be granted to user using these packages.
+To avoid "ORA-24247: network access denied by access control list (ACL)" when executing UTL packages (Network related packages), 
+access has to be granted to user using these packages.
 
 The following example first looks for any ACL currently assigned to host_name.
 If one is found, then the example grants user_name the CONNECT privilege in the ACL only if that user does not already have it. 
-If no ACL exists for host_name, then the example creates a new ACL called ACL_name, grants the CONNECT privilege to user_name, and assigns the ACL to host_name.
+If no ACL exists for host_name, then the example creates a new ACL called ACL_name, grants the CONNECT privilege to user_name, 
+and assigns the ACL to host_name.
 
 DECLARE
 acl_path VARCHAR2(4000);
@@ -880,7 +918,8 @@ is_grant => TRUE|FALSE,
 privilege => 'connect|resolve',
 host_name => host name
 
-Refer to the below note on how to use DBMS_NETWORK_ACL_ADMIN package and also to avoid ORA-24247 : network access denied by access control list (ACL).
+Refer to the below note on how to use DBMS_NETWORK_ACL_ADMIN package and also to avoid 
+ORA-24247 : network access denied by access control list (ACL).
 
 Note 453786.1 ORA-24247 When Executing UTL_HTTP UTL_INADDR Packages
 7.13  Enable Oracle Database Vault 
@@ -891,7 +930,8 @@ Note 453903.1 - Enabling and Disabling Oracle Database Vault in UNIX
 Note 453902.1 - Enabling and Disabling Oracle Database Vault in WINDOWS
 7.14  Identify Invalid Objects With the utluiobj Script
 
-Before the upgrade ,the list of invalid SYS/SYSTEM objects is written to registry$sys_inv_objs and non-SYS/SYSTEM objects was written to registry$nonsys_inv_objs by the Pre-Upgrade Information Tool
+Before the upgrade ,the list of invalid SYS/SYSTEM objects is written to registry$sys_inv_objs and non-SYS/SYSTEM 
+objects was written to registry$nonsys_inv_objs by the Pre-Upgrade Information Tool
  
 After the upgrade, run utluiobj.sql from $ORACLE_HOME/rdbms/admin/ to identify/compare any new invalid objects due to the upgrade.
 
