--- a/oracle-mos-docid/duplicate-db-1913937.1
+++ b/oracle-mos-docid/duplicate-db-1913937.1
@@ -1,4 +1,4 @@
-STEP BY STEP RMAN DUPLICATE Database From RAC ASM To RAC ASM (Doc ID 1913937.1)	To BottomTo Bottom	
+STEP BY STEP RMAN DUPLICATE Database From RAC ASM To RAC ASM (Doc ID 1913937.1)	
 
 In this Document
 Goal
