--- a/oracle-standby-dataguard/ora-1017-1031-docid-1368170.1
+++ b/oracle-standby-dataguard/ora-1017-1031-docid-1368170.1
@@ -1,5 +1,9 @@
 	Troubleshooting ORA-16191 and ORA-1017/ORA-1031 in Data Guard Log Transport Services or Data Guard Broker (Doc ID 1368170.1)	To BottomTo Bottom	
 
+
+ALSO SEE- 2129339.1 
+
+
 In this Document
 Purpose
 Troubleshooting Steps
