--- a/spring-kb/TODO.txt
+++ b/spring-kb/TODO.txt
@@ -1,3 +1,7 @@
-Beans https://www.javatpoint.com/java-bean
+Beans 
+https://www.javatpoint.com/java-bean
+https://stackoverflow.com/questions/11406977/what-is-a-java-bean
+
 Component scan https://javabeat.net/spring-mvc-component-scan-annotations/
+
 Annotations - Component Repository Service etc - https://javabeat.net/spring-annotations-component/
