--- a/spring-kb/TODO.txt
+++ b/spring-kb/TODO.txt
@@ -6,5 +6,5 @@ Component scan https://javabeat.net/spring-mvc-component-scan-annotations/
 
 Annotations - Component Repository Service etc - https://javabeat.net/spring-annotations-component/
 
-Lot of beans, annotations etc
+Lot of @Bean, beans, annotations etc
 https://docs.spring.io/spring-javaconfig/docs/1.0.0.M4/reference/html/ch02s02.html
