--- a/spring-kb/TODO.txt
+++ b/spring-kb/TODO.txt
@@ -2,10 +2,14 @@ Beans
 https://www.javatpoint.com/java-bean
 https://stackoverflow.com/questions/11406977/what-is-a-java-bean
 
-Component scan https://javabeat.net/spring-mvc-component-scan-annotations/
+Component scan 
+https://javabeat.net/spring-mvc-component-scan-annotations/
 
-Annotations - Component Repository Service etc - https://javabeat.net/spring-annotations-component/
+Annotations - Component Repository Service etc - 
+https://javabeat.net/spring-annotations-component/
+http://www.baeldung.com/spring-bean-annotations
 
 Lot of @Bean, beans, annotations etc
 https://docs.spring.io/spring-javaconfig/docs/1.0.0.M4/reference/html/ch02s02.html
 https://docs.spring.io/spring-javaconfig/docs/1.0.0.M4/reference/html/ch04s03.html
+http://www.baeldung.com/spring-bean-annotations
